fix z-index

--- a/public/css/bpmn.css
+++ b/public/css/bpmn.css
@@ -100,13 +100,13 @@ body,
     cursor: pointer;
     position: absolute;
     right: 20px;
-    z-index: 999;
+    z-index: 2;
 }
 
 .in-out {
     position: absolute;
     bottom: 0;
-    z-index: 998;
+    z-index: 1;
     width: 100%;
     display: flex;
     justify-content: center;
